# csv-visualizer

./: README.md  pyproject.toml
app/: __init__.py  config.py  views.py
app/static/css/: visualizer.css
app/static/js/: fetch.js
app/templates/: base.html  describe.html  info.html  upload.html  visualizer.html
app/utils/: csv_analyst.py
